--- a/Nfe/Nfe.csproj
+++ b/Nfe/Nfe.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Entidade\Entidade_BaseNotaFiscal.cs" />
     <Compile Include="Entidade\Entidade_Cancelamento.cs" />
     <Compile Include="Entidade\Entidade_CCe.cs" />
+    <Compile Include="Entidade\Entidade_ConsNFDest.cs" />
     <Compile Include="Entidade\Entidade_Destinatario.cs" />
     <Compile Include="Entidade\Entidade_Duplicatas.cs" />
     <Compile Include="Entidade\Entidade_Email.cs" />
@@ -73,9 +74,12 @@
     <Compile Include="Entidade\Entidade_Endereco.cs" />
     <Compile Include="Entidade\Entidade_Inutilizacao.cs" />
     <Compile Include="Entidade\Entidade_ItemCCe.cs" />
+    <Compile Include="Entidade\Entidade_ItemConsNFDest.cs" />
+    <Compile Include="Entidade\Entidade_ItemManifestacao.cs" />
     <Compile Include="Entidade\Entidade_ItemNotaFiscal.cs" />
     <Compile Include="Entidade\Entidade_LocalEntrega.cs" />
     <Compile Include="Entidade\Entidade_Loja.cs" />
+    <Compile Include="Entidade\Entidade_Manifestacao.cs" />
     <Compile Include="Entidade\Entidade_NotaFiscal.cs" />
     <Compile Include="Entidade\Entidade_NotaFiscalReferida.cs" />
     <Compile Include="Entidade\Entidade_Pessoa.cs" />
@@ -98,6 +102,7 @@
     <Compile Include="Model\Model_InutilizacaoNfe.cs" />
     <Compile Include="Model\Model_LogNfe.cs" />
     <Compile Include="Model\Model_Lote.cs" />
+    <Compile Include="Model\Model_Manisfestacao.cs" />
     <Compile Include="Model\Model_NotaFiscal.cs" />
     <Compile Include="Model\Model_StatusNfe.cs" />
     <Compile Include="Model\Model_XmlCliente.cs" />
@@ -139,6 +144,16 @@
     <Compile Include="Negocio\InutilizacaoNfe\retInutNFe.Auto.cs" />
     <Compile Include="Negocio\InutilizacaoNfe\retInutNFe.cs" />
     <Compile Include="Entidade\Entidade_Transportador.cs" />
+    <Compile Include="Negocio\Manifestacao\consNFeDest.cs" />
+    <Compile Include="Negocio\Manifestacao\consNFeDest.Auto.cs" />
+    <Compile Include="Negocio\Manifestacao\envConfRecebto.cs" />
+    <Compile Include="Negocio\Manifestacao\envConfRecebto.Auto.cs" />
+    <Compile Include="Negocio\Manifestacao\EnviarConsultaDestinatario.cs" />
+    <Compile Include="Negocio\Manifestacao\EnviarManifestacao.cs" />
+    <Compile Include="Negocio\Manifestacao\retconsNFeDest.cs" />
+    <Compile Include="Negocio\Manifestacao\retconsNFeDest.Auto..cs" />
+    <Compile Include="Negocio\Manifestacao\retEnvConfRecebto.Auto.cs" />
+    <Compile Include="Negocio\Manifestacao\retEnvConfRecebto.cs" />
     <Compile Include="Negocio\Nfe\EnviarEntrada.cs" />
     <Compile Include="Negocio\Nfe\EnviarSaida.cs" />
     <Compile Include="Negocio\Nfe\nfe.Auto.cs" />
@@ -168,6 +183,11 @@
       <DependentUpon>Reference.map</DependentUpon>
     </Compile>
     <Compile Include="Web References\Autorizacao\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.map</DependentUpon>
+    </Compile>
+    <Compile Include="Web References\NFeConsultaDest\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.map</DependentUpon>
@@ -228,6 +248,11 @@
     </None>
     <None Include="Web References\Autorizacao\NfeAutorizacao.wsdl" />
     <None Include="Web References\Autorizacao\Reference.map">
+      <Generator>MSDiscoCodeGenerator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
+    <None Include="Web References\NFeConsultaDest\NFeConsultaDest.wsdl" />
+    <None Include="Web References\NFeConsultaDest\Reference.map">
       <Generator>MSDiscoCodeGenerator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
@@ -339,6 +364,17 @@
       <CachedAppSettingsObjectName>Settings</CachedAppSettingsObjectName>
       <CachedSettingsPropName>Nfe_StatuServico_NfeStatusServico2</CachedSettingsPropName>
     </WebReferenceUrl>
+    <WebReferenceUrl Include="https://www.nfe.fazenda.gov.br/NFeConsultaDest/NFeConsultaDest.asmx">
+      <UrlBehavior>Dynamic</UrlBehavior>
+      <RelPath>Web References\NFeConsultaDest\</RelPath>
+      <UpdateFromURL>https://www.nfe.fazenda.gov.br/NFeConsultaDest/NFeConsultaDest.asmx</UpdateFromURL>
+      <ServiceLocationURL>
+      </ServiceLocationURL>
+      <CachedDynamicPropName>
+      </CachedDynamicPropName>
+      <CachedAppSettingsObjectName>Settings</CachedAppSettingsObjectName>
+      <CachedSettingsPropName>Nfe_NFeConsultaDest_NFeConsultaDest</CachedSettingsPropName>
+    </WebReferenceUrl>
   </ItemGroup>
   <ItemGroup>
     <None Include="Web References\DownloadNF\NfeDownloadNF.disco" />
@@ -353,6 +389,7 @@
     <Content Include="Image\backuground.jpg" />
     <Content Include="Image\ok.png" />
     <Content Include="Image\Soft.ico" />
+    <None Include="Web References\NFeConsultaDest\NFeConsultaDest.disco" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
