--- a/Nfe/Properties/Settings.settings
+++ b/Nfe/Properties/Settings.settings
@@ -26,5 +26,8 @@
     <Setting Name="Nfe_NFeConsultaDest_NFeConsultaDest" Type="(Web Service URL)" Scope="Application">
       <Value Profile="(Default)">https://www.nfe.fazenda.gov.br/NFeConsultaDest/NFeConsultaDest.asmx</Value>
     </Setting>
+    <Setting Name="Nfe_DownloadNFe_NfeDownloadNF" Type="(Web Service URL)" Scope="Application">
+      <Value Profile="(Default)">https://www.nfe.fazenda.gov.br/NfeDownloadNF/NfeDownloadNF.asmx</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
